Document leave APIs in OpenAPI spec
